<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context="com.example.sebastianmunozalvial.horoscopo.launcher">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo1"
        android:contentDescription="@string/app_name" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="65dp"
        android:background="@drawable/bg_boton"
        android:text="@string/btn_login"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnLogin"
        android:layout_alignBottom="@+id/btnLogin"
        android:layout_marginStart="47dp"
        android:layout_toEndOf="@+id/btnLogin"
        android:background="@drawable/bg_boton"
        android:text="@string/btn_registro" />
</RelativeLayout>
