<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context="com.example.sebastianmunozalvial.horoscopo.login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/txtLoginNombre"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/lbl_nombre"
        android:background="@drawable/backwithborder"
        android:layout_marginTop="13dp"
        android:textColorHint="@color/letras"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/txtLoginPass"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/lbl_pass"
        android:textColorHint="@color/letras"
        android:background="@drawable/backwithborder"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/txtLoginNombre"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="60dp"
        android:background="@drawable/bg_boton"
        android:text="@string/btn_login" />

    <Button
        android:id="@+id/btnCancelarIngreso"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_boton"
        android:text="@string/btn_cancelar"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="58dp"
        android:layout_alignBottom="@+id/btnIngresar" />
</RelativeLayout>
